fixed nav bar alignment, background, and footer

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,8 +1,9 @@
 #bkgrnd {
   background-image: url("../img/Powell-Steps.jpg");
-  background-size: 100%;
-  height:100%;
+  background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
+  padding: 5vh 5vw;
 }
 
 .remove-pad {
@@ -25,11 +26,8 @@ li {
   background-color: rgba(255,255,255,0.6);
   border-radius: 25px;
   padding: 3%;
-  position: relative;
-  left: 5vw;
-  top: 5vh;
   width: 90vw;
-  height: 90vh;
+  // height: 90vh;
 }
 
 .search, .browse, .notices {
@@ -85,17 +83,65 @@ span:hover{
 }
 
 footer {
+  // position: relative;
   background-color: #666666;
-  padding: 0px 0px 0px, 0px;
-  // border-top: 1px solid #17244c;
-  // bottom: 0;
-  // clear: both;
-  // height: auto;
-  // padding: 0 0 6px;
-  // position: fixed;
-  // width: 100%;
-  // z-index: 100;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 2rem 5vw 1rem 5vw;
+  }
+
+  .footer .links {
+    float:left;
+  }
+
+  .footer .links a {
+    list-style: none;
+    font-weight: bold;
+    color: #ffffff;
+    float:left;
+    // padding: 3rem 0 2rem;
+    margin: 0;
+  }
+    .footer .links a::after {
+      content: "•";
+      padding: 0 0.4rem 0 0.8rem;
+    }
+    .footer .links a:last-child::after {
+      content: "";
+      padding: 0 0.4rem 0 0.8rem;
+    }
+
+  .footer .copywrite {
+    float:right;
+  }
+
+// footer {
+//     background-color: #666666;
+//     padding: 2rem 4rem;
+//     justify-content: center;
+//     color: #fff;
+//     min-width: 100%;
+//     max-height: 100px;
+//     // margin: 0 auto;
+//     box-sizing: border-box;
+// }
+
+.flex-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
+//
+// .footer-down {
+//   // position: absolute;
+// }
+
+// @media only screen and (min-width: 40.063em) {
+//   .footer .columns:nth-child(n+2) {
+//     border-left: 1px solid #b3b3b3;
+//     min-height: 280px;
+//   }
+// }
 
 footer a {
   display: block;
